--- a/Girl Code/Base.lproj/Main.storyboard
+++ b/Girl Code/Base.lproj/Main.storyboard
@@ -1208,7 +1208,7 @@ Cg
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9n-5M-npS">
-                                <rect key="frame" x="113" y="143" width="189" height="58"/>
+                                <rect key="frame" x="131" y="145" width="152" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.45841278750713843" green="0.50589226049733038" blue="0.67158933578247426" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
@@ -1217,7 +1217,7 @@ Cg
                                         <fragment content="All Internships">
                                             <attributes>
                                                 <font key="NSFont" size="18" name="Georgia"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -1228,9 +1228,12 @@ Cg
                                         <integer key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="internshipsButton:" destination="2Ew-c8-OFg" eventType="touchUpInside" id="Dcx-AF-p6u"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92d-I6-eDx">
-                                <rect key="frame" x="113" y="270" width="189" height="58"/>
+                                <rect key="frame" x="131" y="301" width="152" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.45841278749999997" green="0.50589226050000002" blue="0.67158933580000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
@@ -1239,7 +1242,7 @@ Cg
                                         <fragment content="STEM Internships">
                                             <attributes>
                                                 <font key="NSFont" size="18" name="Georgia"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -1252,7 +1255,7 @@ Cg
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VPl-RZ-W6j">
-                                <rect key="frame" x="113" y="419" width="189" height="58"/>
+                                <rect key="frame" x="126" y="447" width="157" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.45841278749999997" green="0.50589226050000002" blue="0.67158933580000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
@@ -1273,8 +1276,29 @@ Cg
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Girl Code Prototype 6" translatesAutoresizingMaskIntoConstraints="NO" id="c6m-Xz-a7a">
+                                <rect key="frame" x="20" y="530" width="101" height="88"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Girl Code Prototype 3" translatesAutoresizingMaskIntoConstraints="NO" id="RfF-Ch-RjQ">
+                                <rect key="frame" x="84" y="726" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Girl Code Prototype 5" translatesAutoresizingMaskIntoConstraints="NO" id="RZE-db-vNq">
+                                <rect key="frame" x="20" y="187" width="111" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Girl Code Prototype 4" translatesAutoresizingMaskIntoConstraints="NO" id="B4c-0L-YuU">
+                                <rect key="frame" x="286" y="519" width="108" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Girl Code Prototype 2" translatesAutoresizingMaskIntoConstraints="NO" id="bk8-eC-QXz">
+                                <rect key="frame" x="301" y="187" width="113" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WvU-ID-yFQ">
-                                <rect key="frame" x="113" y="569" width="189" height="58"/>
+                                <rect key="frame" x="126" y="629" width="157" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.45841278749999997" green="0.50589226050000002" blue="0.67158933580000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
@@ -1326,6 +1350,11 @@ Cg
         <segue reference="X8d-1u-Cqx"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="Girl Code Prototype 2" width="388" height="487"/>
+        <image name="Girl Code Prototype 3" width="501" height="211"/>
+        <image name="Girl Code Prototype 4" width="465" height="483"/>
+        <image name="Girl Code Prototype 5" width="429" height="615"/>
+        <image name="Girl Code Prototype 6" width="487" height="448"/>
         <image name="Image" width="599" height="576"/>
         <image name="Image-1" width="568" height="142"/>
         <image name="unnamed (2)" width="533" height="640"/>
